feat: Implement vehicle relocation event handling and enhance occupancy tracking